# MOVT

./: README.md
TP1/: objTracking.py  pyproject.toml
TP2/: main_TP2.py
TP3/: main_TP3.py
TP3/ADL-Rundle-6/det/: det_gt.txt
TP4/: KalmanFilter.py  main_TP4.py  pyproject.toml
TP4/ADL-Rundle-6/det/: det_gt.txt
TP5/: main_TP5.py  main_TP5_yolo.py  pyproject.toml
TP5/ADL-Rundle-6/det/: det.txt  det_gt.txt
