[tool.poetry]
name = "tp2"
version = "0.1.0"
description = ""
authors = ["david.frecon <david.frecon@epita.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
opencv-python = "^4.8.1.78"
scipy = "^1.11.4"
torchvision = "^0.16.2"
torchsummary = "^1.5.1"
ultralytics = "^8.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
